--- a/Meu site/blog.html
+++ b/Meu site/blog.html
@@ -109,7 +109,7 @@
         </div>
         <div class="centraliza">
             <label for="subject">Assunto:</label><br><br>
-            <input type="radio" name="genre" value="opinion" checked="checked" /> Opinião&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="radio" name="genre" value="opinion" /> Opinião&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input type="radio" name="genre" value="errata" /> Errata&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input type="radio" name="genre" value="update" /> Atualização
         </div>
