--- a/Meu site/photos.html
+++ b/Meu site/photos.html
@@ -5,16 +5,16 @@
 <head>
 	<meta charset="utf-8"/>
     <title>Site - Emilia Clarke</title>
-    <link rel="stylesheet" type="text/css" href="./css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/site5.css">
-    <link rel="stylesheet" type="text/css" href="./css/form.css">
-	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="site5.css">
+    <link rel="stylesheet" type="text/css" href="form.css">
+	<link rel="shortcut icon" href="favicon2.ico" type="image/x-icon" />
 </head>
 
 <body class="grid-container">
     <header><h1 id="begin">Emilia Clarke</h1></header>
     <aside>
-        <nav id="menu">
+        <nav id="menu"><br><br>
                 <ul>
                     <li><a href="bio5.html">Início</a></li>
                     <li><a href="bio5.html">Resumo</a></li>
@@ -27,16 +27,15 @@
                 </ul></nav>
     </aside>
 
-    <main><br><div>
+    <main><br><br><br><div>
         <div class="posicao-imagem">
-            <img class="imagem1" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/>
-            <img class="imagem1" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
+            <img class="imagem1" src="emilia1.jpg" title="Emilia Clarke"/>
+            <img class="imagem1" src="emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
         </div>
         <div class="posicao-imagem">
-            <img class="imagem2" src="./Imagens/emilia3.jpg" title="Emilia Clarke no Oscar"/>
-            <img class="imagem2" src="./Imagens/emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
+            <img class="imagem2" src="emilia3.jpg" title="Emilia Clarke no Oscar"/>
+            <img class="imagem2" src="emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
         </div>
-    <br>
     
     </div>
     </main>
