--- a/Meu site/photos.html
+++ b/Meu site/photos.html
@@ -14,7 +14,7 @@
 <body class="grid-container">
     <header><h1 id="begin">Emilia Clarke</h1></header>
     <aside>
-        <nav id="menu"><br><br><br><br>
+        <nav id="menu"><br><br>
                 <ul>
                     <li><a href="bio5.html">Início</a></li>
                     <li><a href="bio5.html">Resumo</a></li>
