--- a/Meu site/7-1/saudacoes.html
+++ b/Meu site/7-1/saudacoes.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8"/>
     <title>Saudações</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-
-    <script type="text/javascript" src="hora.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    
+    <script type="text/javascript" src="./7-1/hora.js"></script>
     
     <h1>
-        <script type="text/javascript" src="saudacao.js"></script>
+        <script type="text/javascript" src="./7-1/saudacao.js"></script>
     </h1>
 
 </head>
@@ -19,7 +19,7 @@
 
     <br>
 
-    <script type="text/javascript" src="resolucao.js"></script>
+    <script type="text/javascript" src="./7-1/resolucao.js"></script>
     <br>
 
 </body>
