--- a/Meu site/7-1/saudacoes.html
+++ b/Meu site/7-1/saudacoes.html
@@ -5,10 +5,10 @@
     <title>Saudações</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     
-    <script type="text/javascript" src="./7-1/hora.js"></script>
+    <script type="text/javascript" src="hora.js"></script>
     
     <h1>
-        <script type="text/javascript" src="./7-1/saudacao.js"></script>
+        <script type="text/javascript" src="saudacao.js"></script>
     </h1>
 
 </head>
@@ -19,7 +19,7 @@
 
     <br>
 
-    <script type="text/javascript" src="./7-1/resolucao.js"></script>
+    <script type="text/javascript" src="resolucao.js"></script>
     <br>
 
 </body>
