--- a/Meu site/7-1/saudacoes.html
+++ b/Meu site/7-1/saudacoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Saudações</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href=".Meu site/css/style.css" />
     
     <script type="text/javascript" src="hora.js"></script>
     
