--- a/Meu site/7-7/imc.html
+++ b/Meu site/7-7/imc.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="utf-8">
     <title>Exemplo de Exercício</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
 
+    <style type="text/css">    
+    body{
+        font-family: "Times New Roman";
+        background: #708090;
+        margin:0px;
+        margin-top: 0px;
+        font-size: 120%;
+    }
+
+    p{
+        text-align: justify;
+    }
+
+    input[type=text]{ 
+        background-color: #BC8F8F;
+        border: solid;
+        color: black;
+        padding: 5px 15px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+    button{
+        background-color: #BC8F8F;
+        border: solid;
+        color: black;
+        padding: 5px 15px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+    }
+    </style>
+    
     <script type="text/javascript" src="gordura.js"></script>
 </head>
 
